Project files migrated

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.0.0",
-  "name": "@brr-dev/typescript-package-template",
-  "description": "A template repo for bundling TypeScript packages.",
+  "version": "1.1.4",
+  "name": "@brr-dev/classnames",
+  "description": "Generate an HTML class attribute string... however you want.",
   "author": "Brandon Ramirez <brandon@brr.dev>",
   "license": "MIT",
   "main": "./dist/index.js",
